<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/first_name"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="@dimen/sp_18"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/last_name"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="@dimen/sp_18"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/user_name"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="@dimen/sp_18"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/edit_user_name"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/email"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/sp_18"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/edit_email"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/password"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/sp_18"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/edit_password"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>
        <Button
            android:id="@+id/signup"
            android:text="@string/signup"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</FrameLayout>