<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/dp_4">

    <LinearLayout
        android:id="@+id/card"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_5"
        android:layout_margin="@dimen/dp_4">

        <ImageView
            android:id="@+id/picture"
            android:background="@mipmap/ic_launcher"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/header_details"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/date_time"
                    android:text="@string/dummy_date_time"
                    android:layout_gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/sp_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:background="@android:color/darker_gray"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_001"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/details"
                android:padding="@dimen/dp_5"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/content"
                    android:textColor="@android:color/black"
                    android:text="@string/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
